--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,24 +1,53 @@
-* {
-    font-family: 'Roboto', sans-serif;
+*{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
+:root {
+    font-family: 'Roboto', sans-serif;
 
+    --bg-grass: #46d1b2;
+    --bg-fire: #fb6c6c;
+}
 body {
-    background-color: #f6f8fc;
+    width: 100%;
+    min-height: 100vh;
+    background-color: #f0f0f0;
+    padding-top: 16px;
 }
-
+#main {
+    width: 100%;
+    height: 100%;
+}
+.grass {
+    background-color: var(--bg-grass);
+}
+.fire {
+    background-color: var(--bg-fire);
+}
 .content {
-    width: 100vw;
-    height: 100vh;
-    padding: 1rem;
+    padding: 1px 24px 32px;
+    margin-top: 24px;
+    width: 100%;
+    max-width: 1024px;
+    margin-inline: auto;
     background-color: #fff;
+    border-radius: 16px;
 }
-
-@media screen and (min-width: 992px) {
-    .content {
-        max-width: 992px;
-        height: auto;
-        margin: 1rem auto;
-        border-radius: 1rem;
-    }
+.btn {
+    margin-inline: auto;
+    display: block;
+    margin-top: 24px;
+    border: none;
+    background-color: #6c70db;
+    padding: 8px 40px;
+    color: #fff;
+    font-size: 12px;
+    border-radius: 99999px;
+    cursor: pointer;
+}
+.btn:hover {
+    filter: brightness(1.1);
 }
