--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,165 +1,69 @@
-.pokemons {
+@import url(../css/global.css);
+@import url(../css/pokemon-colors.css);
+
+.poke-list {
     display: grid;
     grid-template-columns: 1fr;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    gap: 16px;
 }
-
-.normal {
-    background-color: #a6a877;
+.poke-list .img {
+    width: 80px;
+    display: block;
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
 }
-
-.grass {
-    background-color: #77c850;
+.poke-list .number {
+    display: block;
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    color: #cccccc73;
+    font-size: 12px;
+    font-weight: 700;
 }
-
-.fire {
-    background-color: #ee7f30;
+.poke-list__item {
+    border-radius: 16px;
+    padding: 24px 0 24px 16px;
+    position: relative;
+    min-height: 150px;
 }
-
-.water {
-    background-color: #678fee;
-}
-
-.electric {
-    background-color: #f7cf2e;
-}
-
-.ice {
-    background-color: #98d5d7;
-}
-
-.ground {
-    background-color: #dfbf69;
-}
-
-.flying {
-    background-color: #a98ff0;
-}
-
-.poison {
-    background-color: #a040a0;
-}
-
-.fighting {
-    background-color: #bf3029;
-}
-
-.psychic {
-    background-color: #f65687;
-}
-
-.dark {
-    background-color: #725847;
-}
-
-.rock {
-    background-color: #b8a137;
-}
-
-.bug {
-    background-color: #a8b720;
-}
-
-.ghost {
-    background-color: #6e5896;
-}
-
-.steel {
-    background-color: #b9b7cf;
-}
-
-.dragon {
-    background-color: #6f38f6;
-}
-
-.fairy {
-    background-color: #f9aec7;
-}
-
-.pokemon {
-    display: flex;
-    flex-direction: column;
-    margin: .5rem;
-    padding: 1rem;
-    border-radius: 1rem;
-}
-
-.pokemon .number {
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name {
+.link h2 {
+    color: #fff;
+    font-size: 18px;
+    margin-bottom: 16px;
     text-transform: capitalize;
+}
+.poke-type__item {
     color: #fff;
-    margin-bottom: .25rem;
-}
-
-.pokemon .detail {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pokemon .detail .types {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.pokemon .detail .types .type {
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    border-radius: 1rem;
+    padding: 4px 8px;
+    width: fit-content;
+    border-radius: 99999px;
+    margin-bottom: 4px;
+    font-size: 12px;
     filter: brightness(1.1);
-    text-align: center;
+    text-transform: capitalize;
 }
 
-.pokemon .detail img {
-    max-width: 100%;
-    height: 70px;
-}
-
-.pagination {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 1rem;
-}
-
-.pagination button {
-    padding: .25rem .5rem;
-    margin: .25rem 0;
-    font-size: .625rem;
-    color: #fff;
-    background-color: #6c79db;
-    border: none;
-    border-radius: 1rem;
-}
-
-@media screen and (min-width: 380px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr;
+@media(min-width: 375px){
+    .poke-list {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
-
-@media screen and (min-width: 576px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr;
+@media(min-width: 768px){
+    .poke-list {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .poke-list .img {
+        max-height: 100px!important;
+        display: block;
+        position: absolute;
+        bottom: 15px;
+        right: 15px;
     }
 }
-
-@media screen and (min-width: 992px) {
-    .pokemons {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+@media(min-width: 1200px){
+    .poke-list {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
